--- a/app/src/main/res/layout/activity_reflect_predict_water.xml
+++ b/app/src/main/res/layout/activity_reflect_predict_water.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/linear_mineral"
+    android:id="@+id/linear_mineral_water"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".reflect_predict_water">
