--- a/app/src/main/res/layout/activity_estimate.xml
+++ b/app/src/main/res/layout/activity_estimate.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Enter the reflected voltage"
+        android:hint="Reflected voltage"
         android:textColorHint="#707072">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Enter the Infrared Voltage"
+        android:hint="Infrared Voltage"
         android:textColorHint="#707072">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Enter the Moisture Voltage"
+        android:hint="Moisture Voltage"
         android:textColorHint="#707072">
 
         <com.google.android.material.textfield.TextInputEditText
